# hydroflow-opt

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  COPYING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc/: api.rst  conf.py  index.rst
examples/: quadratic.toml
src/flow_opt/: __init__.py  cases.py  cli.py  config.py  evaluators.py  models.py  runner.py  toy_worker.py
src/hydroflow_opt/: __init__.py  cases.py  cli.py  config.py  models.py  runner.py  toy_worker.py
src/hydroflow_opt/backends/: __init__.py  local.py  slurm.py  worker.py
tests/: test_flow_opt.py  test_hydroflow_opt.py
