[build-system]
requires = [
    "hatchling>=1.25",
]
build-backend = "hatchling.build"


[project]
name = "flow_opt"
description = "Reusable orchestration for simulation-based optimization workflows"
readme = "README.md"
maintainers = [
    { name = "Thomas Isensee", email = "thomas.isensee@iwr.uni-heidelberg.de" },
]
version = "0.0.1"
requires-python = ">=3.11"
license-files = ["LICEN[CS]E*"]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx_rtd_theme",
]
lint = [
    "mypy",
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
]


[project.scripts]
flow-opt = "flow_opt.cli:main"

[project.urls]
repository = "https://github.com/thomasisensee/flow-opt"


[tool.hatch.build.targets.wheel]
packages = ["src/flow_opt"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = "doc"

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/flow-opt/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
