[build-system]
requires = [
    "hatchling>=1.25",
]
build-backend = "hatchling.build"


[project]
name = "hydroflow-opt"
description = "Reusable orchestration for simulation-based optimization workflows"
readme = "README.md"
maintainers = [
    { name = "Thomas Isensee", email = "thomas.isensee@iwr.uni-heidelberg.de" },
]
version = "0.2.0"
requires-python = ">=3.11,<3.14"
license-files = ["LICEN[CS]E*"]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pygmo>=2.19.8",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx_rtd_theme",
]
lint = [
    "mypy",
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
]


[project.scripts]
hydroflow-opt = "hydroflow_opt.cli:main"

[project.urls]
repository = "https://github.com/thomasisensee/hydroflow-opt"


[tool.hatch.build.targets.wheel]
packages = ["src/hydroflow_opt"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = "doc"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/hydroflow-opt/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
